--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.18.2",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "jspdf": "^3.0.0",
@@ -26,7 +26,10 @@
     "moment-timezone": "^0.5.47",
     "next": "^15.1.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.56.3",
+    "recharts": "^2.15.3",
     "sass": "^1.81.0",
     "scss": "^0.2.4",
     "socket.io-client": "^4.8.1",
